--- a/templates/liste/index.html.twig
+++ b/templates/liste/index.html.twig
@@ -1,20 +1,28 @@
-{% extends 'base.html.twig' %}
+{% extends "base.html.twig" %}
+{% block title%}
+    Gestion des listes
+{% endblock %}
 
-{% block title %}Hello ListeController!{% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/apps/symfony/src/Controller/ListeController.php'|file_link(0) }}">src/Controller/ListeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/apps/symfony/templates/liste/index.html.twig'|file_link(0) }}">templates/liste/index.html.twig</a></code></li>
-    </ul>
+<div class="container">
+<div class="row">
+        {% for liste in listeListe %}
+        <div class="col-sm-3">
+            <div class="card" style="width: 18rem; height: 9rem; margin-bottom: 20px;">
+                <div class="card-body">
+                    <h5 class="card-title" style="text-align: center;">{{ liste.Nom }}</h5>
+                    <p class="card-text">{{ liste.Description }}</p>
+                    <a href="{{ path('listes-details', {id: liste.id}) }}" class="card-link">Voir la liste</a>
+                    <a href="#" class="card-link">Supprimer la liste</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+        <a class="btn" href="{{ path('liste-ajout') }}"><i class="far fa-plus-square fa-9x" style="color: green;"></i></a>
+        </div>
 </div>
 {% endblock %}
