--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,16 +20,12 @@
                         </a>
                         <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                             <li>
-                                <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                                    <i class="fas fa-list"></i> <span class="ms-1 d-none d-sm-inline">Listes</span> </a>
-                                <ul class="collapse show nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
-                                    <li class="w-100">
-                                        <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1 </a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 2 </a>
-                                    </li>
-                                </ul>
+                                <a href="{{ path('listes') }}" class="nav-link px-0 align-middle">
+                                <i class="fas fa-list"></i><span class="ms-1 d-none d-sm-inline">Listes</span></a>
+                            </li>
+                            <li>
+                                <a href="#" class="nav-link px-0 align-middle">
+                               <i class="fas fa-tasks"></i><span class="ms-1 d-none d-sm-inline">Tâches</span></a>
                             </li>
                     </div>
                 </div>
@@ -44,5 +40,8 @@
     </body>
 
     {% block javascripts %}
-      {% endblock %}
+    <script type="text/javascript">
+        const liste = document.getElementById('')
+    </script>
+    {% endblock %}
 </html>
