--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
                                 <i class="fas fa-list"></i><span class="ms-1 d-none d-sm-inline">Listes</span></a>
                             </li>
                             <li>
-                                <a href="#" class="nav-link px-0 align-middle">
+                                <a href="{{ path('tache') }}" class="nav-link px-0 align-middle">
                                <i class="fas fa-tasks"></i><span class="ms-1 d-none d-sm-inline">Tâches</span></a>
                             </li>
                     </div>
