--- a/templates/liste/index.html.twig
+++ b/templates/liste/index.html.twig
@@ -12,7 +12,12 @@
 <div class="row">
         {% for liste in listeListe %}
         <div class="col-sm-3">
-            <div id="liste" data-id="{{ liste.id }}" class="card" style="width: 18rem; height: 11rem; margin-bottom: 20px;">
+            <div id="liste" data-id="{{ liste.id }}" class="card" style="width: 18rem; height: 15rem; margin-bottom: 20px;">
+            <div class="card-footer">
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </div>
                 <div class="card-body">
                     <h5 class="card-title" style="text-align: center;">{{ liste.Nom }}</h5>
                     <p class="card-text">{{ liste.Description }}</p>
