--- a/templates/tache/index.html.twig
+++ b/templates/tache/index.html.twig
@@ -1,20 +1,54 @@
-{% extends 'base.html.twig' %}
+{% extends "base.html.twig" %}
+{% block title%}
 
-{% block title %}Hello TacheController!{% endblock %}
+{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<div>
+    <div class="pull-right">
+    </div>
+    <h1>Listes des Tâches
+        <a href ="{{ path('tache-ajout') }}" class ="btn btn-sm btn-success" style="float: right;">
+            <i class ="glyphicon glyphicon-edit" >
+            Ajouter une Tâche
+            </i>
+        </a>
+    </h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/apps/symfony/src/Controller/TacheController.php'|file_link(0) }}">src/Controller/TacheController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/apps/symfony/templates/tache/index.html.twig'|file_link(0) }}">templates/tache/index.html.twig</a></code></li>
-    </ul>
+    <hr />
+    <table id="table" class="table table-striped table-bordered" style="width:100%">
+        <thead>
+            <tr>
+                <th style="border-top:0px solid black; padding-left: 9px; text-align: center;">Nom</th>
+                <th style="border-top:0px solid black; padding-left: 9px; text-align: center;">Statut</th>
+                <th style="border-top:0px solid black; padding-left: 9px; text-align: center;">Liste associée</th>
+                <th style="border-top:0px solid black; padding-left: 9px; text-align: center;">Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for tache in listeTache %}
+            <tr>
+                <td style="text-align: center;">{{ tache.Nom }}</td>
+                <td style="text-align: center;">{{ tache.Statut }}</td>
+                <td style="text-align: center;">{{ tache.getListe.getNom }}</td>
+                <td style="text-align: center;">
+                    <a class="suppression btn btn-danger btn-sm" href="{{ path('tache-suppression', {id: tache.id}) }}" style="text-align: center;" data-playground-id="0">
+                        <i class ="glyphicon glyphicon-chevron-left"></i>
+                        Supprimer la tâche
+                    </a>
+                    
+                    <a class="btn btn-primary btn-sm" href="{{ path('tache-modification', {id: tache.id}) }}" style="text-align: center;">
+                        <i class ="glyphicon glyphicon-chevron-left"></i>
+                        Modifier la tâche
+                    </a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
 {% endblock %}
