--- a/templates/tache/index.html.twig
+++ b/templates/tache/index.html.twig
@@ -33,10 +33,18 @@
             {% for tache in listeTache %}
             <tr>
                 <td style="text-align: center;">{{ tache.Nom }}</td>
-                <td style="text-align: center;">{{ tache.Statut }}</td>
+                <td style="text-align: center;">{{ tache.Statut }}
+                <form action="{{ path('tache-modification-statut', {'id': tache.id }) }}" method="post" style="text-align: center;">
+                        {% if tache.Statut == 'A Faire' %}
+                            <input type="submit" name="statut" value="En Cours" class="btn btn-warning" />
+                        {% elseif tache.Statut == 'En Cours' %}
+                            <input type="submit" name="statut" value="Terminé" class="btn btn-primary" />
+                        {% endif %}
+                    </form>
+                </td>
                 <td style="text-align: center;">{{ tache.getListe.getNom }}</td>
                 <td style="text-align: center;">
-                    <a class="suppression btn btn-danger btn-sm" href="{{ path('tache-suppression', {id: tache.id}) }}" style="text-align: center;" data-playground-id="0">
+                    <a class="suppression btn btn-danger btn-sm" href="{{ path('tache-suppression', {id: tache.id}) }}" style="text-align: center;" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette tâche ?')">
                         <i class ="glyphicon glyphicon-chevron-left"></i>
                         Supprimer la tâche
                     </a>
