--- a/templates/liste/index.html.twig
+++ b/templates/liste/index.html.twig
@@ -9,6 +9,8 @@
 
 {% block body %}
 <div class="container">
+    <h1 style="text-align: center;">Gestion des listes</h1>
+    <hr />
 <div class="row">
         {% for liste in listeListe %}
         <div class="col-sm-3">
