--- a/templates/liste/suppressionListe.html.twig
+++ b/templates/liste/suppressionListe.html.twig
@@ -25,7 +25,7 @@
 </p>
 
         {# Pour le bouton, pas de label ni d'erreur, on affiche juste le widget #}
-        {{ form_widget(form.Sauvegarder, {'attr': {'class': 'btn btn-primary'}}) }}
+        {{ form_widget(form.Sauvegarder, {'attr': {'class': 'btn btn-outline-primary'}}) }}
         {# Fermeture de la balise <form> de formulaire HTML #}
         {{ form_end(form) }}
 
