--- a/templates/tache/ajoutTache.html.twig
+++ b/templates/tache/ajoutTache.html.twig
@@ -15,7 +15,7 @@
         <hr />
         {{ include('tache/formulaireTache.html.twig')}}
         
-        <a href="{{ path('tache') }}" class="btn btn-default">
+        <a href="{{ path('tache') }}" class="btn btn-outline-primary">
             <i class="glyphicon glyphicon-chevron-left">Retour aux taches</i>
         </a>
     </div>
