--- a/templates/liste/index.html.twig
+++ b/templates/liste/index.html.twig
@@ -13,24 +13,45 @@
     <hr />
 <div class="row">
         {% for liste in listeListe %}
-        <div class="col-sm-3">
-            <div id="liste" data-id="{{ liste.id }}" class="card" style="width: 18rem; height: 15rem; margin-bottom: 20px;">
-            <div class="card-footer">
-                <div class="progressbar">
-                    <progress id="prog" max="100" value="{{ Progression(liste.Tache) }}" style="width: 100%"/>
-                </div>
-            </div>
-                <div class="card-body">
-                    <h5 class="card-title" style="text-align: center;">{{ liste.Nom }}</h5>
-                    <p class="card-text">{{ liste.Description }}</p>
-                </div>
-                <div class="card-footer">
+        {% if Progression(liste.Tache) == 100 %}
+            <div class="col-sm-3">
+                <div id="liste" data-id="{{ liste.id }}" class="card text-white bg-success" style="width: 18rem; height: 15rem; margin-bottom: 20px;">
+                    <div class="card-footer">
+                        <div class="progressbar">
+                            <progress id="prog" max="100" value="{{ Progression(liste.Tache) }}" style="width: 100%"/>
+                        </div>
+                    </div>
+                        <div class="card-body">
+                            <h5 class="card-title" style="text-align: center;">{{ liste.Nom }}</h5>
+                            <p class="card-text">{{ liste.Description }}</p>
+                        </div>
+                        <div class="card-footer bg-blue">
                     <a href="{{ path('listes-details', {id: liste.id}) }}" class="btn btn-primary btn-sm">Voir la liste</a>
                     <a href="{{ path('liste-suppression', {id: liste.id}) }}" class="btn btn-danger btn-sm" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette liste ainsi que toutes ses tâches associèes ?')">Supprimer</a>
                     <a href="{{ path('liste-modification', {id: liste.id}) }}" class="btn btn-warning btn-sm">Modifier</a>
-                </div>
+                        </div>
+                    </div>
             </div>
-        </div>
+        {% else %}
+            <div class="col-sm-3">
+                <div id="liste" data-id="{{ liste.id }}" class="card" style="width: 18rem; height: 15rem; margin-bottom: 20px;">
+                    <div class="card-footer">
+                        <div class="progressbar">
+                            <progress id="prog" max="100" value="{{ Progression(liste.Tache) }}" style="width: 100%"/>
+                        </div>
+                    </div>
+                        <div class="card-body">
+                            <h5 class="card-title" style="text-align: center;">{{ liste.Nom }}</h5>
+                            <p class="card-text">{{ liste.Description }}</p>
+                        </div>
+                        <div class="card-footer">
+                    <a href="{{ path('listes-details', {id: liste.id}) }}" class="btn btn-outline-primary btn-sm">Voir la liste</a>
+                    <a href="{{ path('liste-suppression', {id: liste.id}) }}" class="btn btn-outline-danger btn-sm" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette liste ainsi que toutes ses tâches associèes ?')">Supprimer</a>
+                    <a href="{{ path('liste-modification', {id: liste.id}) }}" class="btn btn-outline-warning btn-sm">Modifier</a>
+                        </div>
+                    </div>
+            </div>
+        {% endif %}
         {% endfor %}
         <a class="btn" href="{{ path('liste-ajout') }}"><i class="far fa-plus-square fa-9x" style="color: green;"></i></a>
         </div>
