--- a/templates/liste/modificationListe.html.twig
+++ b/templates/liste/modificationListe.html.twig
@@ -15,7 +15,7 @@
         <hr />
         {{ include('liste/formulaireListe.html.twig')}}
         
-        <a href="{{ path('listes') }}" class="btn btn-default">
+        <a href="{{ path('listes') }}" class="btn btn-outline-primary">
             <i class="glyphicon glyphicon-chevron-left">Retour aux listes</i>
         </a>
     </div>
