--- a/templates/tache/formulaireTache.html.Twig
+++ b/templates/tache/formulaireTache.html.Twig
@@ -46,7 +46,7 @@
         {# Génération automatique des champs pas encore écrits #}
         {{ form_rest(form) }}
         {# Pour le bouton, pas de label ni d'erreur, on affiche juste le widget #}
-        {{ form_widget(form.Sauvegarder, {'attr': {'class': 'btn btn-primary'}}) }}
+        {{ form_widget(form.Sauvegarder, {'attr': {'class': 'btn btn-outline-primary'}}) }}
         {# Fermeture de la balise <form> de formulaire HTML #}
         {{ form_end(form) }}
     </div>
