--- a/templates/tache/index.html.twig
+++ b/templates/tache/index.html.twig
@@ -36,20 +36,20 @@
                 <td style="text-align: center;">{{ tache.Statut }}
                 <form action="{{ path('tache-modification-statut', {'id': tache.id }) }}" method="post" style="text-align: center;">
                         {% if tache.Statut == 'A Faire' %}
-                            <input type="submit" name="statut" value="En Cours" class="btn btn-warning" />
+                            <input type="submit" name="statut" value="En Cours" class="btn btn-outline-warning" />
                         {% elseif tache.Statut == 'En Cours' %}
-                            <input type="submit" name="statut" value="Terminé" class="btn btn-primary" />
+                            <input type="submit" name="statut" value="Terminé" class="btn btn-outline-primary" />
                         {% endif %}
                     </form>
                 </td>
                 <td style="text-align: center;">{{ tache.getListe.getNom }}</td>
                 <td style="text-align: center;">
-                    <a class="suppression btn btn-danger btn-sm" href="{{ path('tache-suppression', {id: tache.id}) }}" style="text-align: center;" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette tâche ?')">
+                    <a class="btn btn-outline-danger btn-sm" href="{{ path('tache-suppression', {id: tache.id}) }}" style="text-align: center;" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette tâche ?')">
                         <i class ="glyphicon glyphicon-chevron-left"></i>
                         Supprimer la tâche
                     </a>
                     
-                    <a class="btn btn-primary btn-sm" href="{{ path('tache-modification', {id: tache.id}) }}" style="text-align: center;">
+                    <a class="btn btn-outline-primary btn-sm" href="{{ path('tache-modification', {id: tache.id}) }}" style="text-align: center;">
                         <i class ="glyphicon glyphicon-chevron-left"></i>
                         Modifier la tâche
                     </a>
