Ajout Datatables.net

--- a/templates/liste/details.html.twig
+++ b/templates/liste/details.html.twig
@@ -12,7 +12,7 @@
     <div class="pull-right">
     </div>
     <h1>Tache de la {{ listeDetails.Nom}}
-        <a href ="{{ path('tache-ajout')}}" class ="btn btn-sm btn-success" style="float: right;">
+        <a href ="{{ path('tache-ajout')}}" class ="btn btn-sm btn-outline-success" style="float: right;">
             <i class ="glyphicon glyphicon-edit" >
             Ajouter une Tache
             </i>
