--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,9 @@
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+            <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs5/dt-1.10.25/r-2.2.9/sb-1.1.0/datatables.min.css"/>
+            <script type="text/javascript" src="https://cdn.datatables.net/v/bs5/dt-1.10.25/r-2.2.9/sb-1.1.0/datatables.min.js"></script>
+
         {% endblock %}
     </head>
     <body>
@@ -43,6 +46,10 @@
     </body>
 
     {% block javascripts %}
-    
+        <script type="text/javascript">
+            $(document).ready( function () {
+                $('#table').DataTable();
+            } );
+        </script>
     {% endblock %}
 </html>
