--- a/templates/tache/index.html.twig
+++ b/templates/tache/index.html.twig
@@ -12,7 +12,7 @@
     <div class="pull-right">
     </div>
     <h1>Listes des Tâches
-        <a href ="{{ path('tache-ajout') }}" class ="btn btn-sm btn-success" style="float: right;">
+        <a href ="{{ path('tache-ajout') }}" class ="btn btn-sm btn-outline-success" style="float: right;">
             <i class ="glyphicon glyphicon-edit" >
             Ajouter une Tâche
             </i>
