--- a/templates/tache/ajoutTache.html.twig
+++ b/templates/tache/ajoutTache.html.twig
@@ -16,7 +16,7 @@
         {{ include('tache/formulaireTache.html.twig')}}
         
         <a href="{{ path('tache') }}" class="btn btn-outline-primary">
-            <i class="glyphicon glyphicon-chevron-left">Retour aux taches</i>
+            <i style="text-align:center;">Retour aux taches</i>
         </a>
     </div>
 </html>
