--- a/templates/liste/details.html.twig
+++ b/templates/liste/details.html.twig
@@ -18,7 +18,10 @@
             </i>
         </a>
     </h1>
-
+    <h4 style="text-align: center;">Nombre de tâches a faire : <b style="color: red;">{{ getStatutToDo(listeDetails.Tache) }}</b> |
+    Nombre de tâches en cours : <b style="color: orange;">{{ getStatutEnCours(listeDetails.Tache) }}</b> |
+    Nombre de tâches terminé : <b style="color: green;">{{ getStatutTermine(listeDetails.Tache) }}</b></h4>
+    <p>
     <hr />
     <table id="table" class="table table-striped table-bordered" style="width:100%">
         <thead>
