--- a/templates/liste/erreurRedirection.html.twig
+++ b/templates/liste/erreurRedirection.html.twig
@@ -9,4 +9,5 @@
 
 {% block body %}
     <h1>Malheureusement, la liste a laquelle vous essayés d'accéder n'existe pas ou a été supprimé</h1>
+    <h4>Retour a <a href=" {{ path('listes') }} ">la page des tâches</a></h4>
 {% endblock %}
