--- a/templates/tache/erreurRedirection.html.twig
+++ b/templates/tache/erreurRedirection.html.twig
@@ -9,4 +9,5 @@
 
 {% block body %}
     <h1>Malheureusement, la tâche a laquelle vous essayez d'accéder n'existe pas ou a été supprimé</h1>
+    <h4>Retour a <a href=" {{ path('tache') }} ">la page des tâches</a></h4>
 {% endblock %}
