--- a/templates/tache/index.html.twig
+++ b/templates/tache/index.html.twig
@@ -22,7 +22,8 @@
     <hr />
     <h4 style="text-align: center;">Nombre de tâches a faire : <b style="color: red;">{{ getStatutToDo(listeTache) }}</b> |
     Nombre de tâches en cours : <b style="color: orange;">{{ getStatutEnCours(listeTache) }}</b> |
-    Nombre de tâches terminé : <b style="color: green;">{{ getStatutTermine(listeTache) }}</b></h4>
+    Nombre de tâches terminé : <b style="color: green;">{{ getStatutTermine(listeTache) }}</b> |
+    Nombre de tâches total : <b style="color: blue;">{{ getCountTache(listeTache) }}</b></h4>
     <p>
     <table id="table" class="table table-striped table-bordered" style="width:100%">
         <thead>
