--- a/templates/tache/ajoutTache.html.twig
+++ b/templates/tache/ajoutTache.html.twig
@@ -11,8 +11,9 @@
 <div>
     <div class="pull-right">
         </div>
-        <h1>Ajout d'une liste</h1>
+        <h1>Ajout d'une tâche</h1>
         <hr />
+        <b><i>Vous serez rediriger sur la liste que vous avez séléctionner</i></b>
         {{ include('tache/formulaireTache.html.twig')}}
         <p>
         <a href="{{ path('tache') }}" class="btn btn-outline-primary">
