--- a/templates/tache/index.html.twig
+++ b/templates/tache/index.html.twig
@@ -41,15 +41,15 @@
                 <td style="text-align: center;">{{ tache.Statut }}
                 <form action="{{ path('tache-modification-statut', {'id': tache.id }) }}" method="post" style="text-align: center;">
                         {% if tache.Statut == 'A Faire' %}
-                            <input type="submit" name="statut" value="En Cours" class="btn btn-outline-warning" />
+                            <input type="submit" name="statut" value="En Cours" class="btn btn-outline-warning" onclick="return confirm('Êtes-vous sûr de vouloir changer le statut de cette tâche ? Vous serez rediriger sur la page de la liste associé.')"/>
                         {% elseif tache.Statut == 'En Cours' %}
-                            <input type="submit" name="statut" value="Terminé" class="btn btn-outline-primary" />
+                            <input type="submit" name="statut" value="Terminé" class="btn btn-outline-primary" onclick="return confirm('Êtes-vous sûr de vouloir changer le statut cette tâche ? Vous serez rediriger sur la page de la liste associé.')"/>
                         {% endif %}
                     </form>
                 </td>
                 <td style="text-align: center;"><a href="{{ path('listes-details', {'id': tache.getListe.getId }) }}">{{ tache.getListe.getNom }}</a></td>
                 <td style="text-align: center;">
-                    <a class="btn btn-outline-danger btn-sm" href="{{ path('tache-suppression', {id: tache.id}) }}" style="text-align: center;" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette tâche ?')">
+                    <a class="btn btn-outline-danger btn-sm" href="{{ path('tache-suppression', {id: tache.id}) }}" style="text-align: center;" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette tâche ? Vous serez rediriger sur la page de la liste associé.')">
                         <i class ="glyphicon glyphicon-chevron-left"></i>
                         Supprimer la tâche
                     </a>
