--- a/templates/tache/modificationTache.html.twig
+++ b/templates/tache/modificationTache.html.twig
@@ -13,6 +13,7 @@
         </div>
         <h1>Modification de la tache {{ tacheModification.Nom }}</h1>
         <hr />
+        <b><i>Vous serez rediriger sur la liste que vous avez séléctionner</i></b>
         {{ include('tache/formulaireTache.html.twig')}}
         <p>
         <a href="{{ path('tache') }}" class="btn btn-outline-primary">
